fix: add text align in buttons

--- a/src/components/writings-list-item/writings-list-item.module.scss
+++ b/src/components/writings-list-item/writings-list-item.module.scss
@@ -9,6 +9,7 @@ $border-color: #cccccc;
   button {
     background: transparent;
     border: 0;
+    text-align: left;
 
     &:hover {
       cursor: pointer;
